  * 2009-11-13 fimex-0.18
    * addition of C-API (c-fimex.h)
  * 2009-10-19 fimex-0.17.1
    * bugfix in translation of CF projection parameters to proj4
    * double-check of projected variables to contain 'grid_parameter' and 'coordinates' attributes
  * 2009-10-13 fimex-0.17
    * adding grib version 1 and 2 reader (beta)
    * adding program indexGribs to create index-files for large or distributed grib-files
    * better integration to other projects started (api-changes)
    * better support for ellipsoids
  * 2009-08-11 fimex-0.16
    * support for earth-ellipsoids as supported by CF-1.2 (earth_radius)
    * support for more projections, lambert conformal conic and mercator
    * integrated felt library, fortran no longer required, simpler build process
    * support for static and dynamic library
    * support for udunits2
  * 2009-06-08 fimex-0.15.1
    * bugfix for translation of rotated lat-long from felt to proj
    * removing some compiler warnings
    * improving compatibility with older versions of libxml
  * 2009-05-29 fimex-0.15
    * enabling forward projection interpolation
    * adding configurable quality-status evaluation/extraction 
  * 2009-05-15 fimex-0.14
    * support for reading/configuring with NcML
    * backporting to netcdf-3.5
    * skipping of tests with boost < 1.34
  * 2009-03-20 fimex-0.13
    * allowing for auto-tuning axes in interpolation (SpatialAxisSpec)
    * removal of variables/attributes in cdmWriterConfig
    * fixing broken projection-interpolation (broken since 0.12)
  * 2009-03-02 fimex-0.12
    * adding coordinate interpolation (kdtree and brute force)
    * fixing bugs in lat-lon interpolation
    * enabling interpolation of ghrsst satellite data files
    * easier build without felt-library
    * using optional OpenMP for time-critical routines
  * 2009-01-23 fimex-0.11
    * adding bicubic spatial interpolation
    * enabling netcdf-4 output with hdf5-zlib compression
  * 2009-01-13 fimex-0.10